--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,4 @@
-.example {
-    display: grid;
-    transition: all .5s;
-    user-select: none;
-    background: linear-gradient(to bottom, white, black);
+*{
+    margin: 0;
+    box-sizing: border-box;
 }
