--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,3 +2,82 @@
     margin: 0;
     box-sizing: border-box;
 }
+body{
+    background-color: antiquewhite
+}
+.header{
+    display: flex;
+    width: 100%;
+    padding: 2rem 2rem;
+    height: 5rem;
+    background-color: transparent;
+}
+.logo{
+    width: 70%;
+}
+.linkLogo{
+    display: inline-block;
+    margin-left: .8rem;
+    text-decoration: none;
+    font-family: 'Rubik', sans-serif;
+    font-size: 2.5rem;
+    color:#222;
+}
+.navbar{
+    display: flex;
+    width: 30%;
+    height: 100%;
+}
+.linkContainer{
+    width: 55%;
+}
+.contactContainer{
+    display: flex;
+    flex-direction: column;
+    margin-left: 2rem;
+    width: 50%;
+}
+.navLink{
+    font-family: 'Rubik', sans-serif;
+    font-size: 1rem;
+    letter-spacing: .1rem;
+    display: inline-block;
+    text-decoration: none;
+    margin: 0 .5rem;
+    color:#222;
+}
+.navText{
+    display: inline-block;
+    font-family: 'Rubik', sans-serif;
+    font-size: .7rem;
+    letter-spacing: .1rem;
+    color:#222;
+}
+.main{
+    width: 100%;
+}
+.seccionOne{
+    width: 100%;
+    height: calc(100vh - 5rem);
+    background-color: antiquewhite;
+}
+.mainText{
+    width: 85%;
+    height: calc(100vh - 5rem);
+    display: flex;
+    flex-direction: column;
+    column-gap: .1rem;
+    padding: 2rem 2rem;
+    background-color: antiquewhite;
+    overflow: hidden;
+}
+.text{
+    display: inline-block;
+    margin: 0;
+    padding: .2rem 0;
+    color:#333;
+    font-size: 9rem;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 400;
+    line-height: 8rem;
+}
